--- a/src/SFA.DAS.ApprenticeFeedback.Domain/SFA.DAS.ApprenticeFeedback.Domain.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Domain/SFA.DAS.ApprenticeFeedback.Domain.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.13" />
   </ItemGroup>
